crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__no_reserved_keys__tests__method_bare_builtin_name.snap
---
source: crates/vize_patina/src/rules/script/no_reserved_keys.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-reserved-keys",
        severity: Error,
        message: "Reserved key 'emit'",
        start: 35,
        end: 39,
        help: Some(
            "Vue exposes built-in instance properties (`$el`, `$data`, `$emit`, ...) and reserves names starting with `$` or `_`; rename this member so it is not shadowed by a framework internal.",
        ),
        labels: [
            Label {
                message: "methods key collides with a Vue built-in instance property",
                start: 35,
                end: 39,
            },
        ],
        fix: None,
    },
]
